--- a/test/WebContent/resource/css/bbs.css
+++ b/test/WebContent/resource/css/bbs.css
@@ -25,7 +25,7 @@
 	font-size: 19px;
 	line-height: 30px;
 }
-.notice{
+.notice1, .notice2, .notice3, .notice4{
 	width: 100%;
 	/* height: 708px; */
 	height: 100%;
@@ -33,11 +33,11 @@
 	border-top: 2px solid black;
 }
 
-#title{
+#title, #up_title{
 	width: 90%;
 }
 
-#contents{
+#contents, #up_contents{
 	width: 90%;
 	height: 50%;
 }
