--- a/test/.settings/org.eclipse.wst.common.component
+++ b/test/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="test">
+    <wb-module deploy-name="BBS_using_MongoDB_JavaScript">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes/" source-path="/ImportedClasses"/>
-        <property name="context-root" value="test"/>
-        <property name="java-output-path" value="/test/build/classes"/>
+        <property name="java-output-path" value="/BBS_using_MongoDB_JavaScript/build/classes"/>
+        <property name="context-root" value="BBS_using_MongoDB_JavaScript"/>
     </wb-module>
 </project-modules>
