--- a/test/WebContent/resource/css/bbs.css
+++ b/test/WebContent/resource/css/bbs.css
@@ -25,7 +25,7 @@
 	font-size: 19px;
 	line-height: 30px;
 }
-.notice1, .notice2, .notice3, .notice4{
+.notice{
 	width: 100%;
 	/* height: 708px; */
 	height: 100%;
